--- a/package.json
+++ b/package.json
@@ -5,10 +5,6 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
-    "@babel/cli": "7.8.4",
-    "@babel/core": "7.7.5",
-    "@babel/node": "7.7.4",
-    "@babel/preset-env": "7.7.6",
     "eslint": "6.7.2",
     "eslint-config-get-off-my-lawn": "5.0.1",
     "eslint-config-prettier": "6.7.0",
@@ -16,12 +12,13 @@
     "husky": "4.2.3",
     "lint-staged": "10.0.8",
     "nodemon": "2.0.2",
-    "prettier": "1.19.1"
+    "prettier": "1.19.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   },
   "scripts": {
     "start": "yarn build && node dist",
-    "build": "babel src/index.js --out-dir dist",
-    "dev": "nodemon --exec babel-node src/index",
+    "build": "webpack",
     "lint": "eslint . --ext .js,.json --quiet --fix"
   },
   "husky": {
