--- a/package.json
+++ b/package.json
@@ -35,9 +35,5 @@
       "prettier --write"
     ]
   },
-  "dependencies": {
-    "cheerio": "1.0.0-rc.3",
-    "request": "2.88.2",
-    "request-promise-native": "1.0.8"
-  }
+  "dependencies": {}
 }
