docs: change name of project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "check-new-episodes",
+  "name": "halloween-doodle-2016-bot",
   "version": "1.0.0",
   "author": "Ramzan Chasygov <theliketurbo@gmail.com>",
   "license": "MIT",
